hphp/hack/test/typecheck/aktuple/unify_error2.php.exp
File "unify_error2.php", line 13, characters 14-18:
Invalid argument (Typing[4110])
File "unify_error2.php", line 3, characters 21-25:
This is a float
File "unify_error2.php", line 10, characters 22-26:
It is incompatible with a string
